hotfix: fixed horizontal scrolling issue

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -20,14 +20,6 @@
 @media screen and (max-width: 879px) {
   .elements {
     width: 90%;
-    margin: 0 auto;
-    grid-template-columns: repeat(2, minmax(282px, 1fr));
-  }  
-}
-
-@media screen and (max-width: 680px) {
-  .elements {
-    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
