--- a/blocks/horizontal-line/horizontal-line.css
+++ b/blocks/horizontal-line/horizontal-line.css
@@ -8,6 +8,6 @@
 
 @media screen and (max-width: 879px) {
   .horizontal-line {
-    width: 100%;
+    width: 90%;
   }  
 }
